# profiler-qgis-plugin

./: .copyright-header.txt  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  whitelist.txt
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: code-style.yml  draft-release.yml  pr-build.yml  release.yml  tests.yml
components/core/: README.md  pyproject.toml
components/core/src/qgis_profiler/: __init__.py  constants.py  cprofiler.py  decorators.py  event_recorder.py  exceptions.py  profiler.py  settings.py  utils.py
components/core/src/qgis_profiler/config/: __init__.py  event_config.py
components/core/src/qgis_profiler/meters/: __init__.py  map_rendering.py  meter.py  recovery_measurer.py  thread_health_checker.py
components/core/test/: conftest.py  test_cprofiler.py  test_event_config.py  test_event_recorder.py  test_profiler.py  test_utils.py
components/core/test/meters/: test_meter.py  test_recovery_measurer.py  test_thread_health_checker.py
components/lib/: README.md  pyproject.toml
components/lib/src/profiler_test_utils/: __init__.py  decorator_utils.py  utils.py
components/lib/src/qgis_profiler/: __init__.py  constants.py  decorators.py  event_recorder.py  exceptions.py  utils.py
components/lib/src/qgis_profiler/config/: event_config.py
components/lib/src/qgis_profiler/meters/: map_rendering.py  meter.py  recovery_measurer.py  thread_health_checker.py
components/lib/test/: conftest.py  test_cprofiler.py  test_event_config.py  test_event_recorder.py  test_profiler.py  test_utils.py
components/lib/test/meters/: test_map_rendering.py  test_meter.py  test_recovery_measurer.py  test_thread_health_checker.py
components/plugin/: README.md  pyproject.toml  requirements.txt
components/plugin/src/profiler_plugin/: __init__.py  metadata.txt  plugin.py
components/plugin/src/profiler_plugin/ui/: __init__.py  profiler_extension.py  profiler_extension.ui  profiler_proxy_model.py  settings_dialog.py
components/plugin/test/plugin/: conftest.py  test_profiler_extension.py  test_settings_dialog.py
docs/: DEVELOPMENT.md  _qgis_stubs.py  conf.py  getting-started.rst  index.rst
docs/core/: cprofiler.rst  decorators.rst  event-recorder.rst  index.rst  meters.rst  profiler.rst  settings.rst
docs/plugin/: extension.rst  index.rst  plugin.rst  proxy_model.rst  settings_dialog.rst
src/profiler_plugin/: __init__.py  metadata.txt  plugin.py
src/profiler_plugin/ui/: profiler_extension.py  profiler_extension.ui  profiler_proxy_model.py  settings_dialog.py  settings_dialog.ui
src/profiler_plugin/ui/macro/: macro_model.py  macro_panel.py  macro_panel.ui
src/profiler_test_utils/: decorator_utils.py  utils.py
src/qgis_profiler/: __init__.py  action_profiler.py  cprofiler.py  decorators.py  event_recorder.py  exceptions.py  macro.py  profiler.py  settings.py  utils.py
src/qgis_profiler/config/: event_config.py
src/qgis_profiler/meters/: map_rendering.py  meter.py  recovery_measurer.py  thread_health_checker.py
test/: conftest.py  pytest.ini  test_cprofiler.py  test_event_config.py  test_event_recorder.py  test_macros.py  test_profiler.py  test_utils.py  utils.py
test/meters/: test_map_rendering.py  test_meter.py  test_recovery_measurer.py  test_thread_health_checker.py
test/plugin/: test_macro_model.py  test_macro_panel.py  test_profiler_extension.py  test_settings_dialog.py
