[metadata]
name = profiler-qgis-plugin
version = attr: qgis_profiler.__version__

[options]
python_requires = >=3.9
packages = find:
package_dir =
    = src
install_requires =
    qgis_plugin_tools>=0.5.0,<1
[options.packages.find]
where = src

[options.package_data]
* =
    py.typed
Profiler =
    metadata.txt
    resources/**/*
    **/*.ui
    .BUILD
