[metadata]
name = profiler-qgis-plugin
version = attr: qgis_profiler.__version__

[options]
python_requires = >=3.9
packages = find:
package_dir =
    = src
install_requires =
    qgis_plugin_tools>=0.5.0,<1
[options.packages.find]
where = src

[options.package_data]
qgis_profiler =
    py.typed
profiler_plugin =
    py.typed
    metadata.txt
    **/*.svg
    **/*.ts
    **/*.ui

[options.entry_points]
qgis_plugin_dev_tools =
    profiler_plugin=profiler_plugin
