[project]
name = "profiler-qgis-plugin"
version = "0.0.1"
description = "The QGIS Profiler Plugin aims to extend QGIS Profiler development tool to be able to profile plugins and QGIS itself easily."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["qgis_plugin_tools>=0.5.0", "qgis-profiler-lib"]

[project.urls]
homepage = "https://github.com/Joonalai/profiler-qgis-plugin"
repository = "https://github.com/Joonalai/profiler-qgis-plugin"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "profiler_plugin"
include = ["**/py.typed", "**/metadata.txt", "**/*.svg", "**/*.ts", "**/*.ui"]

[tool.uv]
default-groups = ["dev", "lint"]

[dependency-groups]
dev = [
  "exceptiongroup>=1.2.2",
  "prek>=0.3.5",
  "pyqt5-stubs>=5.15.6.0",
  "pytest>=8.3.5",
  "pytest-cov>=6.1.0",
  "pytest-dotenv>=0.5.2",
  "pytest-lazy-fixtures>=1.1.2",
  "pytest-mock>=3.14.0",
  "pytest-qgis>=2.1.0",
  "pytest-qt>=4.4.0",
  "pytest-subtests>=0.14.1",
  "pytest-timeout>=2.3.1",
  "qgis-plugin-dev-tools>=0.10.0",
]
lint = [
  "flake8>=6.0.0",
  "flake8-pyproject>=1.2.3",
  "flake8-qgis>=1.0.0",
  "flake8-spellcheck>=0.28.0",
  "mypy>=1.13.0",
]

[tool.uv.sources]
qgis-profiler-lib = { workspace = true }

[tool.qgis_plugin_dev_tools]
plugin_package_name = "profiler_plugin"
version_number_source = "distribution"
changelog_file_path = "../../CHANGELOG.md"
env_file_path = "../../.env"
runtime_requires = [
  "qgis_plugin_tools",
  "profiler-qgis-plugin",
  "qgis-profiler-lib",
]

[project.entry-points.qgis_plugin_dev_tools]
profiler_plugin = "profiler_plugin"
